--- a/app/views/types/index.html.erb
+++ b/app/views/types/index.html.erb
@@ -12,6 +12,7 @@
           <tr>
             <th> N </th>
             <th> Type name </th>
+            <th> Holidays</th>
           </tr>
         </thead>
         <%= render @types %>
