--- a/app/views/cardtexts/index.html.erb
+++ b/app/views/cardtexts/index.html.erb
@@ -1,19 +1,22 @@
+<h1> Card Texts </h1>
   <div>
-    <h1> Card Texts </h1>
+<!--
     <div class="digg_pagination">
-      <%= will_paginate @cardtexts, :container => false %>
+      <%#= will_paginate @cardtexts, :container => false %>
     </div>
-
+ -->
     <p> <%= link_to 'New Card Text', new_cardtext_path %> </p>
 
       <% if @cardtexts.present? %>
-        <table class="table table-bordered">
+        <table id="dtBasicExample" class="table table-striped table-bordered table-sm">
           <thead class="thead-light" align="center">
             <tr>
               <th> N rec</th>
               <th> Description </th>
               <th> Text </th>
               <th> Holiday </th>
+              <th></th>
+              <th></th>
             </tr>
           </thead>
           <%= render @cardtexts %>
@@ -23,10 +26,6 @@
           <%= 'Empty list' %>
         </p>
       <% end %>
-    <div class="digg_pagination">
-      <%= will_paginate @cardtexts, :container => false %>
-    </div>
-
     <br>
   </div>
 
