--- a/app/views/companies_holidays/index.html.erb
+++ b/app/views/companies_holidays/index.html.erb
@@ -1,13 +1,11 @@
 <div>
 <h1>Companies Holidays</h1>
-<div class="digg_pagination">
-  <%= will_paginate @companies_holidays, :container => false %>
+<!-- <div class="digg_pagination">
+  <%#= will_paginate @companies_holidays, :container => false %>
 </div>
-
+ -->
   <p> <%= link_to 'New Company Holiday', new_companies_holiday_path %> </p>
     <%= render 'header_companies_holidays_list' %>
 </div>
-<div class="digg_pagination">
-  <%= will_paginate @companies_holidays, :container => false %>
-</div>
+
 <br>
