--- a/app/views/companies_people/_header_companies_people_list.html.erb
+++ b/app/views/companies_people/_header_companies_people_list.html.erb
@@ -1,10 +1,12 @@
 <% if @companies_people.present? %>
-  <table class="table table-bordered">
+  <table id="dtBasicExample" class="table table-striped table-bordered table-sm">
     <thead class="thead-light" align="center">
       <tr>
         <th> N rec</th>
         <th> Company </th>
         <th> Person </th>
+        <th>   </th>
+        <th>   </th>
       </tr>
     </thead>
     <%= render @companies_people %>
