--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -1,18 +1,21 @@
 <div>
   <h1> Countries </h1>
+<!--
   <div class="digg_pagination">
-    <%= will_paginate @countries, :container => false %>
+    <%#= will_paginate @countries, :container => false %>
   </div>
-
+ -->
   <p> <%= link_to 'New Country', new_country_path %> </p>
 
     <% if @countries.present? %>
-      <table class="table table-bordered">
+      <table id="dtBasicExample" class="table table-striped table-bordered table-sm">
         <thead class="thead-light" align="center">
           <tr>
             <th> N record</th>
             <th> Country </th>
             <th> Code </th>
+            <th>   </th>
+            <th>   </th>
           </tr>
         </thead>
         <%= render @countries %>
@@ -22,9 +25,6 @@
         <%= 'Empty list' %>
       </p>
     <% end %>
-  <div class="digg_pagination">
-    <%= will_paginate @countries, :container => false %>
-  </div>
   <br>
 </div>
 
