--- a/app/views/countries_holidays/index.html.erb
+++ b/app/views/countries_holidays/index.html.erb
@@ -1,15 +1,17 @@
 <div>
   <h1>Countries Holidays</h1>
-  <div class="digg_pagination">
-    <%= will_paginate @countries_holidays, :container => false %>
+<!--   <div class="digg_pagination">
+    <%#= will_paginate @countries_holidays, :container => false %>
   </div>
-
+ -->
 
   <p> <%= link_to 'New Country - Holiday link', new_countries_holiday_path %> </p>
     <%= render 'header_countries_holidays_list' %>
+<!--
   <div class="digg_pagination">
-    <%= will_paginate @countries_holidays, :container => false %>
+    <%#= will_paginate @countries_holidays, :container => false %>
   </div>
+ -->
   <br>
 </div>
 <br>
