--- a/app/views/dates_holidays/index.html.erb
+++ b/app/views/dates_holidays/index.html.erb
@@ -1,25 +1,27 @@
 <h1>Calendar Holidays</h1>
-<div class="digg_pagination">
-  <%= will_paginate @dates_holidays, :container => false %>
+<!-- <div class="digg_pagination">
+  <%#= will_paginate @dates_holidays, :container => false %>
 </div>
+ -->
+
 <%= link_to 'New Date Holiday', new_dates_holiday_path %>
 
 <a style="margin: 5%"><%= full_calendar %> </a>
 
 <a style="margin: 2%"><%= left_out_holidays %> </a>
 
-  <table class="table table-bordered">
-    <thead class="thead-light" align="center">
+  <!-- <table class="table table-bordered"> -->
+  <table id="dtBasicExample" class="table table-striped table-bordered table-sm">
+     <thead class="thead-light" align="center">
       <tr>
         <th> Day / Month </th>
         <th> Holiday </th>
         <th> Companies </th>
         <th> People </th>
         <th> N rec</th>
+        <th></th>
+        <th></th>
       </tr>
     </thead>
     <%= render @dates_holidays %>
   </table>
-<div class="digg_pagination">
-  <%= will_paginate @dates_holidays, :container => false %>
-</div>
