--- a/app/views/email_texts/_header_email_texts_list.html.erb
+++ b/app/views/email_texts/_header_email_texts_list.html.erb
@@ -1,10 +1,12 @@
 <% if @email_texts.present? %>
-  <table class="table table-bordered">
+  <table id="dtBasicExample" class="table table-striped table-bordered table-sm">
     <thead class="thead-light" align="center">
       <tr>
         <th> # </th>
         <th> Email </th>
         <th> CardText </th>
+        <th></th>
+        <th></th>
       </tr>
     </thead>
     <%= render @email_texts  %>
