--- a/app/views/holidays/index.html.erb
+++ b/app/views/holidays/index.html.erb
@@ -1,24 +1,27 @@
 <h3> Holidays </h3>
-<div class="digg_pagination">
-  <%= will_paginate @holidays, :container => false %>
+<!-- <div class="digg_pagination">
+  <%#= will_paginate @holidays, :container => false %>
 </div>
-
+ -->
 <%= link_to 'New Holiday', new_holiday_path %>
 
 <table class="container">
   <% if @holidays.present? %>
-    <table class="tab-sorted table table-bordered">
+    <!-- 130220 <table class="tab-sorted table table-bordered"> -->
+    <table id="dtBasicExample" class="table table-striped table-bordered table-sm">
       <thead class="thead-light" id="head" align="center">
         <tr>
-          <th name="column1" class="sort-by-title pointer col-md-auto">
+          <!-- 130220 <th name="column1" class="sort-by-title pointer col-md-auto"> -->
+          <th>
             <%= 'Holiday' %>
-            <%= octicon 'arrow-up', class: 'text-success' %>
-            <%= octicon 'arrow-down', class: 'text-success hide' %>
+            <%#= octicon 'arrow-up', class: 'text-success' %>
+            <%#= octicon 'arrow-down', class: 'text-success hide' %>
           </th>
-          <th name="column2" class="pointer col-md-auto">
+          <!-- 130220 <th name="column2" class="pointer col-md-auto"> -->
+          <th>
             <%= 'Type' %>
-            <%= octicon 'arrow-up', class: 'text-success hide' %>
-            <%= octicon 'arrow-down', class: 'text-success hide' %>
+            <%#= octicon 'arrow-up', class: 'text-success hide' %>
+            <%#= octicon 'arrow-down', class: 'text-success hide' %>
           </th>
           <th name="column3" class="pointer col-md-auto">
             <%= 'Calculated' %>
@@ -26,6 +29,8 @@
           <th name="column4" class="pointer col-md-auto">
             N
           </th>
+          <th></th>
+          <th></th>
         </tr>
       </thead>
       <%= render @holidays %>
@@ -36,7 +41,4 @@
     </p>
   <% end %>
 </table>
-<div class="digg_pagination">
-  <%= will_paginate @holidays, :container => false %>
-</div>
 
