--- a/app/views/navbar/_nav.html.erb
+++ b/app/views/navbar/_nav.html.erb
@@ -71,12 +71,12 @@
           <%= link_to 'Companies-People', companies_people_path %>
         </a>
       </li>
-      <li class="nav-item active">
+  <!--     <li class="nav-item active">
         <a class="nav-link" href="#">
           <%= link_to 'Mail Addresses', mail_addresses_path %>
         </a>
       </li>
-
+ -->
       <li class="nav-item active">
         <a class="nav-link" href="#">
           <%= link_to 'Post Cards', postcards_path %>
