--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -1,21 +1,26 @@
 <div>
   <h1> People </h1>
-  <div class="digg_pagination">
-     <%= will_paginate @people, :container => false %>
+<!--   <div class="digg_pagination">
+     <%#= will_paginate @people, :container => false %>
   </div>
+ -->
   <%= link_to 'New Person', new_person_path %>
   <% if @people.present? %>
-    <table class="tab-sorted table table-bordered" style="font-size: 12px">
+    <!-- <table class="tab-sorted table table-bordered" style="font-size: 12px"> -->
+    <table id="dtBasicExample" class="table table-striped table-bordered table-sm">
       <thead class="thead-light" align="center">
         <tr>
-          <th name="column1" class="sort-by-title pointer col-md-auto">
+          <!--130220 <th name="column1" class="sort-by-title pointer col-md-auto"> -->
+          <th>
             <%= 'Name and Company' %>
-            <%= octicon 'arrow-up', class: 'text-success' %>
-            <%= octicon 'arrow-down' , class: 'text-success hide' %>
+            <%#= octicon 'arrow-up', class: 'text-success' %>
+            <%#= octicon 'arrow-down' , class: 'text-success hide' %>
           </th>
           <th> Birthday </th>
           <th> Email </th>
           <th> N rec </th>
+          <th>  </th>
+          <th>  </th>
         </tr>
       </thead>
       <%= render @people %>
@@ -25,8 +30,10 @@
       <%= 'Empty list' %>
     </p>
   <% end %>
+<!--
   <div class="digg_pagination">
-     <%= will_paginate @people, :container => false %>
+     <%#= will_paginate @people, :container => false %>
   </div>
+ -->
 </div>
 
