--- a/app/views/postcards/index.html.erb
+++ b/app/views/postcards/index.html.erb
@@ -1,19 +1,21 @@
 <div>
   <h1> Postcards </h1>
-  <div class="digg_pagination">
-    <%= will_paginate @postcards, :container => false %>
+<!--   <div class="digg_pagination">
+    <%#= will_paginate @postcards, :container => false %>
   </div>
-
+ -->
   <p> <%= link_to 'New Postcard', new_postcard_path %> </p>
 
     <% if @postcards.present? %>
-      <table class="table table-bordered">
+      <table id="dtBasicExample" class="table table-striped table-bordered table-sm">
         <thead class="thead-light" align="center">
           <tr>
             <th> #</th>
             <th> Holiday </th>
             <th> File name </th>
             <th> Image </th>
+            <th>   </th>
+            <th>   </th>
           </tr>
         </thead>
         <%= render @postcards %>
@@ -23,9 +25,6 @@
         <%= 'Empty list' %>
       </p>
     <% end %>
-  <div class="digg_pagination">
-    <%= will_paginate @postcards, :container => false %>
-  </div>
   <br>
 </div>
 
