--- a/app/views/types/index.html.erb
+++ b/app/views/types/index.html.erb
@@ -7,7 +7,7 @@
   <p> <%= link_to 'New Type', new_type_path %> </p>
 
     <% if @types.present? %>
- <table class="table table-bordered">
+    <table class="table table-striped table-bordered table-sm">
      <thead class="thead-light" align="center">
           <tr>
             <th> N </th>
