--- a/app/views/cardtexts/index.html.erb
+++ b/app/views/cardtexts/index.html.erb
@@ -1,7 +1,6 @@
 <h1> Card Texts </h1>
   <div>
-<!--
-    <div class="digg_pagination">
+<!-- <div class="digg_pagination">
       <%#= will_paginate @cardtexts, :container => false %>
     </div>
  -->
