--- a/app/views/companies_people/index.html.erb
+++ b/app/views/companies_people/index.html.erb
@@ -1,6 +1,5 @@
   <h1>Companies People</h1>
-<!--
-  <div class="digg_pagination">
+<!--  <div class="digg_pagination">
     <%#= will_paginate @companies_people, :container => false %>
   </div>
  -->
