--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -1,7 +1,6 @@
 <div>
   <h1> Countries </h1>
-<!--
-  <div class="digg_pagination">
+<!--  <div class="digg_pagination">
     <%#= will_paginate @countries, :container => false %>
   </div>
  -->
