--- a/app/views/email_cards/index.html.erb
+++ b/app/views/email_cards/index.html.erb
@@ -1,14 +1,11 @@
   <div>
     <h1>Links: Email - PostCards</h1>
-    <div class="digg_pagination">
-      <%= will_paginate @email_cards, :container => false %>
+<!--     <div class="digg_pagination">
+      <%#= will_paginate @email_cards, :container => false %>
     </div>
-
+ -->
     <%= render 'header_email_cards_list' %>
-    <div class="digg_pagination">
-      <%= will_paginate @email_cards, :container => false %>
-    </div>
-    <br>
+  <br>
 
   </div>
   <br>
