--- a/app/views/shared/pagination.html.erb
+++ b/app/views/shared/pagination.html.erb
@@ -1,3 +1,4 @@
-<div class="digg_pagination">
-  <%= will_paginate @holidays, :container => false %>
+<!-- <div class="digg_pagination">
+  <%#= will_paginate @holidays, :container => false %>
 </div>
+ -->
