--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -22,8 +22,7 @@
     <%= 'Empty list' %>
   </p>
 <% end %>
-<!--
-  <div class="digg_pagination">
+<!--  <div class="digg_pagination">
     <%#= will_paginate @companies, :container => false %>
   </div>
  -->
