--- a/app/views/companies_emails/index.html.erb
+++ b/app/views/companies_emails/index.html.erb
@@ -1,14 +1,10 @@
   <div>
     <h1>Links: Company Email</h1>
-    <div class="digg_pagination">
-      <%= will_paginate @companies_emails, :container => false %>
+<!--     <div class="digg_pagination">
+      <%#= will_paginate @companies_emails, :container => false %>
     </div>
-
+ -->
     <%= render 'header_companies_emails_list' %>
-    <div class="digg_pagination">
-      <%= will_paginate @companies_emails, :container => false %>
-    </div>
     <br>
-
   </div>
   <br>
