--- a/app/views/mail_addresses/index.html.erb
+++ b/app/views/mail_addresses/index.html.erb
@@ -1,10 +1,10 @@
 <div>
   <h1> Mail Addresses </h1>
-  <div class="digg_pagination">
-    <%= will_paginate @mail_addresses, :container => false %>
+<!--   <div class="digg_pagination">
+    <%#= will_paginate @mail_addresses, :container => false %>
   </div>
-
-  <p> <%= link_to 'New Mail Address', new_mail_address_path %> </p>
+-->
+    <p> <%= link_to 'New Mail Address', new_mail_address_path %> </p>
 
     <% if @mail_addresses.present? %>
       <table class="table table-bordered">
@@ -22,9 +22,6 @@
         <%= 'Empty list' %>
       </p>
     <% end %>
-  <div class="digg_pagination">
-    <%= will_paginate @mail_addresses, :container => false %>
-  </div>
   <br>
 </div>
 
