--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -6,7 +6,7 @@
  -->
   <%= link_to 'New Person', new_person_path %>
   <% if @people.present? %>
-    <!-- <table class="tab-sorted table table-bordered" style="font-size: 12px"> -->
+    <!--130220 <table class="tab-sorted table table-bordered" style="font-size: 12px"> -->
     <table id="dtBasicExample" class="table table-striped table-bordered table-sm">
       <thead class="thead-light" align="center">
         <tr>
@@ -30,10 +30,6 @@
       <%= 'Empty list' %>
     </p>
   <% end %>
-<!--
-  <div class="digg_pagination">
-     <%#= will_paginate @people, :container => false %>
-  </div>
- -->
+
 </div>
 
