--- a/app/views/types/index.html.erb
+++ b/app/views/types/index.html.erb
@@ -1,14 +1,15 @@
+<h1> Types </h1>
 <div>
-  <h1> Types </h1>
-  <div class="digg_pagination">
-    <%= will_paginate @types, :container => false %>
+<!--  <div class="digg_pagination">
+    <%#= will_paginate @types, :container => false %>
   </div>
+ -->
 
   <p> <%= link_to 'New Type', new_type_path %> </p>
 
     <% if @types.present? %>
-    <table class="table table-striped table-bordered table-sm">
-     <thead class="thead-light" align="center">
+      <table class="table table-striped table-bordered table-sm">
+        <thead class="thead-light" align="center">
           <tr>
             <th> N </th>
             <th> Type name </th>
@@ -22,9 +23,6 @@
         <%= 'Empty list' %>
       </p>
     <% end %>
-  <div class="digg_pagination">
-    <%= will_paginate @types, :container => false %>
-  </div>
   <br>
 </div>
 
