--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -6,8 +6,8 @@
  -->
   <%= link_to 'New Person', new_person_path %>
   <% if @people.present? %>
-    <!--130220 <table class="tab-sorted table table-bordered" style="font-size: 12px"> -->
-    <table id="dtBasicExample" class="table table-striped table-bordered table-sm">
+    <!--130220 <table class="tab-sorted table table-striped table-bordered" style="font-size: 12px"> -->
+    <table id="dtBasicExample" class="table table-bordered table-sm">
       <thead class="thead-light" align="center">
         <tr>
           <!--130220 <th name="column1" class="sort-by-title pointer col-md-auto"> -->
