--- a/app/assets/stylesheets/sorted.scss
+++ b/app/assets/stylesheets/sorted.scss
@@ -10,3 +10,11 @@ table.dataTable thead .sorting_desc_disabled:after,
 table.dataTable thead .sorting_desc_disabled:before {
 bottom: .5em;
 }
+
+td.highlight {
+    background-color: whitesmoke !important;
+}
+
+tr.highlight {
+    background-color: red !important;
+}
