--- a/app/views/emails/index.html.erb
+++ b/app/views/emails/index.html.erb
@@ -35,19 +35,19 @@
 <table class="container">
   <% if @emails.present? %>
     <!-- <table style="font-size: 12px"  class="table table-bordered"> -->
-    <table id="dtBasicExample" class="table table-striped table-bordered table-sm">
+    <table id="tableEmails" class="table table-striped table-bordered table-sm">
       <thead class="thead-light" align="center">
         <tr>
-          <th> N </th>
+          <th> Will be Send </th>
           <th> Description </th>
           <th> Subject </th>
           <th> Companies / <br> Email address</th>
           <th> Holiday </th>
           <th> Message </th>
           <th> Postcards </th>
-          <th> Will be Send </th>
           <th> Sent  </th>
           <th> YEAR  </th>
+          <th> N </th>
           <th></th>
           <th></th>
           <th></th>
