--- a/app/views/navbar/_nav.html.erb
+++ b/app/views/navbar/_nav.html.erb
@@ -71,41 +71,53 @@
           <%= link_to 'Companies-People', companies_people_path %>
         </a>
       </li>
-  <!--     <li class="nav-item active">
-        <a class="nav-link" href="#">
-          <%= link_to 'Mail Addresses', mail_addresses_path %>
-        </a>
-      </li>
- -->
       <li class="nav-item active">
         <a class="nav-link" href="#">
           <%= link_to 'Post Cards', postcards_path %>
         </a>
       </li>
-<!--       <li class="nav-item active">
-        <a class="nav-link" href="#">
-          <%= link_to 'Emails - Cards', email_cards_path %>
-        </a>
-      </li>
- -->      <li class="nav-item active">
+      <li class="nav-item active">
         <a class="nav-link" href="#">
           <%= link_to 'Card Texts', cardtexts_path %>
         </a>
       </li>
+      <% if check_email %>
+        <li class="nav-item active">
+          <a class="nav-link">
+            <%= link_to 'ADMIN DASHBOARD ', rails_admin_path %>
+          </a>
+        </li>
+      <% end %>
+
+      <% if false %>
+<!--
       <li class="nav-item active">
-        <a class="nav-link">
-          <%= link_to 'ADMIN DASHBOARD ', rails_admin_path %>
-        </a>
-      </li>
-<!--       <li class="nav-item active">
         <a class="nav-link" href="#">
-          <%= link_to 'Reserved Item', mail_addresses_path %>
+          <%#= link_to 'Mail Addresses', mail_addresses_path %>
         </a>
       </li>
- -->
-    <!--   <li class="nav-item active">
+-->
+<!--
+      <li class="nav-item active">
+        <a class="nav-link" href="#">
+          <%#= link_to 'Emails - Cards', email_cards_path %>
+        </a>
+      </li>
+-->
+<!--
+      <li class="nav-item active">
+        <a class="nav-link" href="#">
+          <%#= link_to 'Reserved Item', mail_addresses_path %>
+        </a>
+      </li>
+-->
+<!--
+      <li class="nav-item active">
         <a class="nav-link" href="#">Greeting Texts</a>
-     -->  </li>
+
+      </li>
+-->
+      <% end %>
 
   </div>
 </nav>
