Add restriction for CompaniesEmail on delete Company

--- a/app/views/companies_holidays/_companies_holiday.html.erb
+++ b/app/views/companies_holidays/_companies_holiday.html.erb
@@ -4,6 +4,9 @@
   </td>
   <td>
     <%= companies_holiday.company.name %>
+    <a style="color: blue;" >
+    ( <%= companies_holiday.company.country.name %> )
+    </a>
   </td>
   <td>
     <%= companies_holiday.holiday.name %>
