Change email address to 'crewing'

--- a/app/views/greetings_mailer/send_message.html.erb
+++ b/app/views/greetings_mailer/send_message.html.erb
@@ -21,6 +21,6 @@ Best Regards,
 <div style="font-family: 'Arial Black';  ">Staff Centre Group of Companies</div>
 <div><a style="font-weight: bold">T</a>  <a>+380 48 737 8500</a> </div>
 <div><a style="font-weight: bold">F</a>  <a>+380 48 737 8050</a> </div>
-<div><a style="font-weight: bold">E</a>  <a>application@staff.od.ua</a>
+<div><a style="font-weight: bold">E</a>  <a>crewing@staff.od.ua</a>
 <div><a style="font-weight: bold">W</a>  <a>www.staff-centre.com</a>
 </div>
