--- a/app/views/layouts/_view_day_month.html.erb
+++ b/app/views/layouts/_view_day_month.html.erb
@@ -25,7 +25,7 @@
           <div style="font-family: 'Arial Black'; ">Staff Centre Group of Companies</div>
           <div><a style="font-weight: bold">T</a>  <a>+380 48 737 8500</a> </div>
           <div><a style="font-weight: bold">F</a>  <a>+380 48 737 8050</a> </div>
-          <div><a style="font-weight: bold">E</a>  <a style="text-decoration: underline;">application@staff.od.ua</a>
+          <div><a style="font-weight: bold">E</a>  <a style="text-decoration: underline;">crewing@staff.od.ua</a>
           <div><a style="font-weight: bold">W</a>  <a style="text-decoration: underline;">www.staff-centre.com</a>
         </div>
       </td>
